# animus-provider-codex

./: Cargo.toml  README.md  plugin.toml
.github/workflows/: release.yml
src/: backend.rs  config.rs  lib.rs  main.rs
tests/: contract.rs
