[package]
name = "animus-provider-codex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenAI Codex CLI provider plugin for Animus"
repository = "https://github.com/launchapp-dev/animus-provider-codex"
homepage = "https://github.com/launchapp-dev/animus-cli"
readme = "README.md"
default-run = "animus-provider-codex"

[lib]
name = "animus_provider_codex"
path = "src/lib.rs"

[[bin]]
name = "animus-provider-codex"
path = "src/main.rs"

[dependencies]
animus-plugin-protocol   = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.0" }
animus-provider-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.0" }
animus-plugin-runtime    = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.0" }
animus-session-backend   = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync"] }
async-trait = "0.1"
futures = "0.3"

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread", "sync"] }
